# k2000_visa_generator

./: .dockerignore  .gitignore  CLAUDE.md  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py  wsgi.py
.github/workflows/: ci.yml  docker.yml
app/: Computer.py  DeviceIdParser.py  PhilipsGenerator.py  TimeHelper.py  Transform.py  Uint64.py  WebApp.py
app/helpers/: config_builder.py
app/templates/: index.html
config/: logging.yaml
docker/: Dockerfile  build.sh  build_publish.sh  build_utils.py  release.sh
docker/helpers/: buildUtls.py
docs/: CLAUDE.md  PLAN.md  PROJECT_STATUS.md
lib_code/: Computer.py  DeviceIdParser.py  PhilipsGenerator.py  TimeHelper.py  Transform.py  Uint32.py  Uint64.py
templates/: index.html
tests/: test_computer.py  test_philips_generator.py  test_seed_transform.py  test_time_helper.py  test_time_transform.py  test_transform1.py  test_transform2.py
